kubernetes/apps/base/kata-containers/kata-containers/app/tracee-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kata-runtime-observer
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kata-runtime-observer
    app.kubernetes.io/component: metrics
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: kata-runtime-observer
    app.kubernetes.io/component: runtime-observer
  ports:
    - name: metrics
      port: 3366
      targetPort: metrics
      protocol: TCP
